--- a/layout.html
+++ b/layout.html
@@ -60,10 +60,10 @@
 						</a>
 					</li>
 					<li>
-						<form>
+						<form action = "[[url]]?act=search" method = "post">
 							Search by Author: 
 							<input type="text" name="query" />
-							<input type="submit" value="search" />
+							<input type="submit" value="search" name = "Submit"/>
 						</form>
 					</li>
 				</ul>
